test/errors/error10.sp
%same variable occurs more than once in record definition.
sorts
#s={f(a)}.
#s1=f(#s(X),#s(X)):X=X.
predicates
rules
